# starboard-ai-assignment

./: .gitignore  CODEBASE_ANALYSIS_REPORT.md  README.md  ROADMAP.md  appflow.md  assignment.md  cors-fix-status.md  implementation-plan.md  implementation-status.md  improvements.md  migration_plan.md  test_websocket.py
backend/: .env.example  .env.template  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt  run.py  test_extraction_framework.py
backend/agents/: __init__.py  api_discovery.py  comparable_discovery.py  data_extraction.py
backend/api_docs/: cook_county.yaml  dallas_county.yaml  la_county.yaml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: archival.py  backup.py  base.py  data_update.py  init_db.py  models.py  versioning.py
backend/clients/: attomdata.py
backend/config/: __init__.py  field_mappings.yaml  settings.py
backend/logs/: cache.json  main.json  market_routes.json  property_routes.json
backend/migrations/: env.py
backend/models/: __init__.py  address.py  base.py  financials.py  metrics.py  property.py
backend/routes/: __init__.py  health.py  market.py  properties.py
backend/tests/: conftest.py  test_health.py  test_market_routes.py  test_property_routes.py
backend/utils/: __init__.py  backup.py  batch.py  cache.py  cleanup.py  data_analysis.py  db.py  filters.py  health.py  logger.py  market_analysis.py  outliers.py  quality.py  scheduler.py  transform.py  updates.py  validation.py  versioning.py  visualization.py
(+91 files in other folders)
