[project]
name = "starboard-backend"
version = "0.1.0"
description = "Starboard backend service"
requires-python = ">=3.11,<3.12"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v" 